--- a/SourceControlFinalAssignment/FinalApp/FinalApp/Views/Shared/_Layout.cshtml
+++ b/SourceControlFinalAssignment/FinalApp/FinalApp/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 }
                 else
                 {
-                    <p class="navbar-brand " style="margin: 0">App Name</p>
+                    <p class="navbar-brand " style="margin: 0">Heta's Application</p>
                 }
             </div>
             <div class="navbar-collapse collapse">
@@ -46,7 +46,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year -Test application</p>
+            <p>&copy; @DateTime.Now.Year -Heta's application</p>
         </footer>
     </div>
 
