--- a/SourceControlFinalAssignment/FinalApp/FinalApp/Views/Shared/_Layout.cshtml
+++ b/SourceControlFinalAssignment/FinalApp/FinalApp/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 }
                 else
                 {
-                    <p class="navbar-brand " style="margin: 0">Heta's Application</p>
+                    <p class="navbar-brand " style="margin: 0">Heta's App</p>
                 }
             </div>
             <div class="navbar-collapse collapse">
