--- a/SourceControlFinalAssignment/FinalApp/FinalApp/Views/User/Login.cshtml
+++ b/SourceControlFinalAssignment/FinalApp/FinalApp/Views/User/Login.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Login";
 }
 
-<h2>Login</h2>
+<h2>User Login</h2>
 
 
 @using (Html.BeginForm("LoginUser", "User", FormMethod.Post, new { id = "form" }))
